integration test config and readme change
